--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -11,7 +11,7 @@ Fonts are separated by a & */
   --accent1-color: #9df375;
   --accent2-color: #F7E9CF;
   --accent3-color: #D9F4F3;
-  --accent4-color: #000000;
+  --accent4-color: black;
   --accent5-color: #B4091E;
 
   /* change the values below to your chosen font(s) */
@@ -19,15 +19,15 @@ Fonts are separated by a & */
   --paragraph-font: "Lato", "Nunito Sans", "Neuton";
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #481D0F;  /* headlines on a white background */ 
-  --headline-color-on-color: #316B34; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #481D0F; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #316B34; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #F7E9CF  ;
-  --nav-link-color: #481D0F;
-  --nav-background-color: #F7E9CF;
-  --nav-hover-link-color: #B4091E;
-  --nav-hover-background-color: #9df375;
+  --headline-color-on-white: var(--secondary-color);  /* headlines on a white background */ 
+  --headline-color-on-color: var(--primary-color); /* headlines on a colored background */ 
+  --paragraph-color-on-white: var(--secondary-color); /* paragraph text on a white background */ 
+  --paragraph-color-on-color: var(--primary-color); /* paragraph text on a colored background */ 
+  --paragraph-background-color: var(--accent2-color)  ;
+  --nav-link-color: var(--secondary-color);
+  --nav-background-color: var(--accent2-color);
+  --nav-hover-link-color: var(--accent5-color);
+  --nav-hover-background-color: --acc;
 }
 
 
@@ -44,7 +44,7 @@ body.background{
   background-color: var(--accent4-color);
 }
 main.background{
-  background-color: var(--accent3-color);
+  background-color: var(--accent2-color);
 }
 img {
   display: block;
