--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -195,3 +195,10 @@ nav a:hover {
   border-top: 1px solid;
   border-right: 1px solid;
 }
+.content{
+  width: 100%;
+}
+
+img{
+  width: 100px;
+}
