--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -6,44 +6,35 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #4a5292;
-  --secondary-color: #af6c6c;
-  --accent1-color: #1a2796;
-  --accent2-color: #a70b0b;
-  --accent3-color: white;
-  --accent4-color: black;
+  --primary-color: #1a2796;
+  --secondary-color:#a70b0b;
+  --accent1-color: #ffffff;
+  --accent2-color: #000000;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Baskerville", Verdana, "Garamond";
   --paragraph-font: "Lato", "Nunito Sans", "Neuton";
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: var(--secondary-color);  /* headlines on a white background */ 
-  --headline-color-on-color: var(--primary-color); /* headlines on a colored background */ 
-  --paragraph-color-on-white: var(--secondary-color); /* paragraph text on a white background */ 
-  --paragraph-color-on-color: var(--primary-color); /* paragraph text on a colored background */ 
-  --paragraph-background-color: var(--accent2-color)  ;
-  --nav-link-color: var(--secondary-color);
-  --nav-background-color: var(--accent2-color);
-  --nav-hover-link-color: var(--accent5-color);
-  --nav-hover-background-color: --acc;
+  --headline-color-on-white: var(--primary-color);  /* headlines on a white background */ 
+  --headline-color-on-color: var(--accent1-color); /* headlines on a colored background */ 
+  --paragraph-color-on-white: var(--accent2-color); /* paragraph text on a white background */ 
+  --paragraph-color-on-color: var(--accent1-color); /* paragraph text on a colored background */ 
+  --paragraph-background-color: var(--primary-color)  ;
+  --nav-link-color: var(--accent1-color);
+  --nav-background-color: var(--secondary-color);
+  --nav-hover-link-color: var(--accent1-color);
+  --nav-hover-background-color: var(--primary-color);
 }
 
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
-
 body {
   max-width: 1200px;
   margin: 0 auto;
   padding: 4em;
   font-size: 18px;
   text-align: center;
-}
-body.background{
-  background-color: var(--accent4-color);
-}
-main.background{
-  background-color: var(--accent2-color);
 }
 img {
   display: block;
@@ -86,17 +77,15 @@ p {
   background-color: #999;
 }
 .colors td{
-  width: repeat(7, 1fr);
+  width: 25%;
   height: 3em;
 }
 
 .primary {
   background-color: var(--primary-color);
-  color: white;
 }
 .secondary {
   background-color: var(--secondary-color);
-  color: white;
 }
 .accent1 {
   background-color: var(--accent1-color);
@@ -104,17 +93,7 @@ p {
 .accent2{
   background-color: var(--accent2-color);
 }
-.accent3{
-  background-color: var(--accent3-color);
-}
-.accent4{
-  background-color: var(--accent4-color);
-  color: white;
-}
-.accent5{
-  background-color: var(--accent5-color);
-  color: white;
-}
+
 p.colored {
   background-color: var(--paragraph-background-color);
   color: var(--paragraph-color-on-color);
@@ -193,11 +172,4 @@ nav a:hover {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
-}
-.content{
-  width: 100%;
-}
-
-img{
-  width: 100px;
 }
