--- a/styles/site-plan.css
+++ b/styles/site-plan.css
@@ -20,7 +20,7 @@ Fonts are separated by a & */
   --headline-color-on-color: var(--accent1-color); /* headlines on a colored background */ 
   --paragraph-color-on-white: var(--accent2-color); /* paragraph text on a white background */ 
   --paragraph-color-on-color: var(--accent1-color); /* paragraph text on a colored background */ 
-  --paragraph-background-color: var(--primary-color)  ;
+  --paragraph-background-color: var(--secondary-color);
   --nav-link-color: var(--accent1-color);
   --nav-background-color: var(--secondary-color);
   --nav-hover-link-color: var(--accent1-color);
@@ -36,6 +36,7 @@ body {
   font-size: 18px;
   text-align: center;
 }
+body
 img {
   display: block;
   margin: 0 auto;
@@ -50,7 +51,7 @@ h2 {
 hr {
   height: 3px;
   margin: 35px 0;
-  background: var(--accent1-color);
+  background: var(--accent2-color);
 }
 header {
   padding: 1em;
