--- a/styles/style.css
+++ b/styles/style.css
@@ -85,7 +85,7 @@ section {
     padding: 2%;
 }
 
-.paul, .christ {
+.paul, .christ, .god {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     
@@ -112,7 +112,7 @@ section {
     margin-top: 150px;
 }
 
-.christ h2, .christ p {
+.christ h2, .christ p, .god h2, .god p {
     padding: 5%;
     grid-column: 1/2;
     grid-row: 1/2;
@@ -122,7 +122,11 @@ section {
     margin-top: 150px;
 }
 
-.christ img {
+.god p {
+    margin-top: 200px;
+}
+
+.christ img, .god img {
     width: 100%;
 }
 
@@ -140,4 +144,33 @@ footer {
     width: 100px;
     border-radius: 50%;
     margin: 2%;
+}
+
+/* Jesus Christ Page */
+
+.jc-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.jc-grid h2 {
+    color: var(--secondary-color);
+}
+
+.jc-grid h1 {
+
+    grid-column: 1/3;
+    text-align: center;
+}
+
+.jc-grid img {
+    width: 100%;
+}
+
+.god {
+    grid-column: 1/3;
+}
+
+.god h2 {
+    color: var(--accent2-color);
 }
